--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "json-server": "^1.0.0-beta.2",
     "node": "^22.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
